--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="assets\css\styles.css">
+    <script src="assets\js\script.js"></script>
 </head>
+
 <body>
-    
+
+    <div class="container">
+        <div class="music-desc">a</div>
+        <div class="navbar">a</div>
+        <div class="empty-space">a</div>
+        <div class="music-menu">a</div>
+        <div class="music-list">a</div>
+    </div>
 </body>
+
 </html>
